# surlor-ai-build

./: .gitignore  AGENTS.md  README-GAMEKIT.md  apk-monitor.ps1  build-monitor.sh  build-surlor.bat  generate_icons.py  generate_launcher_icons.py  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: accessibility.apk
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/ai/assistance/operit/api/chat/: AIForegroundService.kt
app/src/main/java/com/ai/assistance/operit/core/application/: OperitApplication.kt
app/src/main/java/com/ai/assistance/operit/core/tools/: ToolResultDataClasses.kt
app/src/main/java/com/ai/assistance/operit/data/api/: MarketStatsApiService.kt
app/src/main/java/com/ai/assistance/operit/data/preferences/: CharacterCardBilingualData.kt  CharacterCardManager.kt
app/src/main/java/com/ai/assistance/operit/data/repository/: ChatHistoryManager.kt
app/src/main/java/com/ai/assistance/operit/data/skill/: SkillRepository.kt
app/src/main/java/com/ai/assistance/operit/provider/: MemoryDocumentsProvider.kt  OperitDataDocumentsProvider.kt  WorkspaceDocumentsProvider.kt
app/src/main/java/com/ai/assistance/operit/services/: FloatingChatService.kt
app/src/main/java/com/ai/assistance/operit/services/core/: ApiConfigDelegate.kt  ChatHistoryDelegate.kt  MessageProcessingDelegate.kt
app/src/main/java/com/ai/assistance/operit/ui/common/: NavItem.kt  OperitUtilityTheme.kt
app/src/main/java/com/ai/assistance/operit/ui/error/: CrashReportActivity.kt
app/src/main/java/com/ai/assistance/operit/ui/main/: MainActivity.kt
app/src/main/java/com/ai/assistance/operit/ui/recovery/: DataRecoveryActivity.kt  DataRecoveryViewModel.kt
app/src/main/java/com/ai/assistance/operit/ui/theme/: Color.kt  LiquidGlass.kt  Theme.kt  ThemeColorSchemeResolver.kt
app/src/main/java/com/ai/assistance/operit/widget/: VoiceAssistantGlanceWidget.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  interaction_service.xml  shortcuts.xml  toolpkg_desktop_widget_info.xml
examples/: super_admin.js  super_admin.ts
examples/types/: results.d.ts  system.d.ts
fbx/: CMakeLists.txt
gametool/: build.gradle.kts  manifest.json
gametool/src/main/: AndroidManifest.xml
gametool/src/main/assets/game_engines/: model_market.json
gametool/src/main/java/com/ai/assistance/operit/gametool/: GameKit.kt
gametool/src/main/java/com/ai/assistance/operit/gametool/download/: ModelDownloadManager.kt
gradle/wrapper/: gradle-wrapper.properties
llama/: CMakeLists.txt
llama/src/main/cpp/: CMakeLists.txt
mmd/: CMakeLists.txt
mnn/: CMakeLists.txt
mnn/src/main/cpp/: CMakeLists.txt
quickjs/src/main/cpp/: CMakeLists.txt
web-chat/: index.html
web-chat/src/ui/features/chat/screens/: ConfigurationScreen.tsx
web-chat/src/ui/features/chat/util/: chatIcons.tsx  chatTheme.ts
web-chat/src/ui/features/chat/util/styles/: chat-dialogs.css  chat-foundation.css
(+27 files in other folders)
